[TASK]    Avoid PHP 8.1 deprecations when indexing. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/37
[TASK]    Check if content element with search configuration is accessible
[DOC]     Add missing documentation for hooks for indexers. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/36

Version 4.2.0, December 2021
[!!!]     This version has a new requirement (EXT:dashboard).
[FEATURE] Add cachable searchbox. Thanks to Stephan Bauer. https://github.com/teaminmedias-pluswerk/ke_search/pull/430
[BUGFIX]  Do not create preview images for files attached in the workspace version of a record. Thanks to medarob. https://github.com/teaminmedias-pluswerk/ke_search/issues/434
[BUGFIX]  Fix toggling of indexed content in the backend module for TYPO3 11 by using Bootstrap 5 data attributes.
[TASK]    Add dashboard as a requirement because it's not possible to check if dashboard is installed when the widgets are registered. https://github.com/tpwd/ke_search/issues/15

Version 4.1.0, October 2021
[!!!]     This version supports TYPO3 10 and 11 and drops support for TYPO3 9.
[TASK]    Remove support for TYPO3 9
[TASK]    Make extension installable with TYPO3 11
[TASK]    Switch from xml to xlf language files
[TASK]    Replace deprecated GeneralUtility::milliseconds() with native PHP function
[TASK]    Add check if static template is included
[TASK]    Adapt usage of filePathSanitizer to TYPO3 11
[TASK]    Use new namespace for PageRepository
[TASK]    Move commands registration from Commands.php to Services.yaml
[TASK]    Move dependency injection for AbstractBackendModuleController from inject annotation to constructor injection
[BUGFIX]  Fix syntax error with PHP 7.2 and 7.3. Thanks to Benjamin Franzke. https://github.com/tpwd/ke_search/pull/5
[TASK]    Remove usage of deprecated constant TYPO3_MODE, see https://docs.typo3.org/c/typo3/cms-core/master/en-us/Changelog/11.0/Deprecation-92947-DeprecateTYPO3_MODEAndTYPO3_REQUESTTYPEConstants.html